[package]

name = "coreutils"
version = "0.1.0"
authors = ["drrb <drrrrrrrrrrrb@gmail.com>"]

[[bin]]
name = "base64"
path = "src/base64.rs"

[[bin]]
name = "basename"
path = "src/basename.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "false"
path = "src/false.rs"

[[bin]]
name = "hostname"
path = "src/hostname.rs"

[[bin]]
name = "true"
path = "src/true.rs"
